build/create-deploy-svc-ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-1
  namespace: prod
  labels:
    app: nodejs-app-1
    owner: Petro_Skaletskyy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodejs-app-1
  template:
    metadata:
      labels:
        app: nodejs-app-1
    spec:
      containers:
      - name: nodejs-app-1
        image: "pskaletskyy/nodeapp-final"
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-2
  namespace: prod
  labels:
    app: nodejs-app-2
    owner: Petro_Skaletskyy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodejs-app-2
  template:
    metadata:
      labels:
        app: nodejs-app-2
    spec:
      containers:
      - name: nodejs-app-2
        image: "pskaletskyy/nodeapp-final"
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-3
  namespace: prod
  labels:
    app: nodejs-app-3
    owner: Petro_Skaletskyy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodejs-app-3
  template:
    metadata:
      labels:
        app: nodejs-app-3
    spec:
      containers:
      - name: nodejs-app-3
        image: "pskaletskyy/nodeapp-final"
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-4
  namespace: prod
  labels:
    app: nodejs-app-4
    owner: Petro_Skaletskyy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodejs-app-4
  template:
    metadata:
      labels:
        app: nodejs-app-4
    spec:
      containers:
      - name: nodejs-app-4
        image: "pskaletskyy/nodeapp-final"
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-1-service
  namespace: prod
  labels:
    app: nodejs-app-1
spec:
  type: LoadBalancer
  selector:
    app: nodejs-app-1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-2-service
  namespace: prod
  labels:
    app: nodejs-app-2
spec:
  type: LoadBalancer
  selector:
    app: nodejs-app-2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-3-service
  namespace: prod
  labels:
    app: nodejs-app-3
spec:
  type: LoadBalancer
  selector:
    app: nodejs-app-3
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-4-service
  namespace: prod
  labels:
    app: nodejs-app-4
spec:
  type: LoadBalancer
  selector:
    app: nodejs-app-4
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nodeapp-final.app1
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nodejs-app-1-service
                port:
                  number: 80
    - host: nodeapp-final.app2
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: nodejs-app-2-service
                port:
                  number: 80
    - host: nodeapp-final.app3
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: nodejs-app-3-service
                port:
                  number: 80
    - host: nodeapp-final.app4
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: nodejs-app-4-service
                port:
                  number: 80
